[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/Scripts/Interface/LevelFinishedScreen.gd" type="Script" id=1]

[node name="LevelFinishedScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.662745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.3
anchor_top = 0.378
anchor_right = 0.7
anchor_bottom = 0.378
margin_top = -24.08
margin_right = -3.05176e-05
margin_bottom = 23.92
text = "Label"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="Panel"]
anchor_left = 0.4
anchor_top = 0.739
anchor_right = 0.6
anchor_bottom = 0.739
margin_top = -10.04
margin_bottom = 9.95999
text = "RETRY"

[node name="NextButton" type="Button" parent="Panel"]
anchor_left = 0.4
anchor_top = 0.828
anchor_right = 0.6
anchor_bottom = 0.828
margin_top = -10.08
margin_bottom = 9.91998
disabled = true
text = "NEXT LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Panel"]
anchor_left = 0.4
anchor_top = 0.917
anchor_right = 0.6
anchor_bottom = 0.917
margin_top = -10.12
margin_bottom = 9.87997
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel"]
anchor_left = 0.612
anchor_top = 0.833
anchor_right = 0.8
anchor_bottom = 0.833
margin_left = 0.319977
margin_top = -11.88
margin_bottom = 12.12
text = "Coming Soon"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Panel/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_MenuButton_pressed"]
